[tool.poetry]
name = "pyhaopenmotics"
version = "0.0.1"
description = "Asynchronous Python client for the OpenMotics API."
authors = ["Wouter Coppens <wouter.coppens@gmail.com>"]
maintainers = ["Wouter Coppens <wouter.coppens@gmail.com>"]
license = "AGPLv3"
readme = "README.md"
homepage = "https://github.com/woutercoppens/pyhaopenmotics/"
repository = "https://github.com/woutercoppens/pyhaopenmotics/"
documentation = "https://github.com/woutercoppens/pyhaopenmotics/"
keywords = ["openmotics", "api", "async", "client", "homeassistant"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "pyhaopenmotics", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
# httpx = "0.22.0" installed via homeassistant
authlib = ">=0.15.5"
tenacity = "^8.0.1"
cached_property = "^1.5.2"
oauthlib = "^3.2.0"
pydantic = "^1.9.0"


[tool.poetry.dev-dependencies]
aresponses = "^2.1.5"
black = "^22.3"
blacken-docs = "^1.12.1"
coverage = {version = "^6.3.1", extras = ["toml"]}
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.940"
pre-commit-hooks = "^4.2.0"
pre-commit = "^2.18.1"
pre-commit-hooks = "^4.1.0"
pylint = "^2.13.7"
pytest = "^7.1.1"
pyright = "^1.1.239"
pytest-asyncio = "^0.18.2"
pytest-cov = "^3.0.0"
yamllint = "^1.26.3"
pyupgrade = "^2.31.1"
flake8-simplify = "^0.19.2"
vulture = "^2.3"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.3.20"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.8.0"
flake8-eradicate = "^1.2.0"
flake8-markdown = "^0.3.0"
darglint = "^1.8.1"
safety = "^1.10.3"
codespell = "^2.1.0"
bandit = "^1.7.4"
respx = "^0.19.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/woutercoppens/pyhaopenmotics/issues"
Changelog = "https://github.com/woutercoppens/pyhaopenmotics/releases"

[tool.bandit]
targets = ["src"]
skips = ["B101", "B110", "B106"]

[tool.black]
target-version = ['py39']

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
# exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.coverage.run]
branch = true
source = ["pyhaopenmotics"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.MASTER]
extension-pkg-whitelist = [
  "pydantic"
]
ignore= [
  "tests"
]

[tool.pylint.BASIC]
good-names = [
    "_",
    "ex",
    "fp",
    "i",
    "id",
    "j",
    "k",
    "on",
    "Run",
    "T",
]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable= [
    "format",
    "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length=88

[tool.pytest.ini_options]
addopts = "--cov"

[tool.vulture]
min_confidence = 80
paths = ["src", "tests"]
verbose = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__"
]
ignore = []

reportMissingImports = true
reportMissingTypeStubs = false
